# VolvoComm

./: .gitattributes  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: builds.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/types/: mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/: ContactModal.tsx
src/app/hooks/: useEventApi.ts  useEventListenApi.ts  useScrollToBottom.ts  useTauriApi.ts
src/app/styles/: globals.css  transition.module.css
src/app/types/: index.ts
