[package]
name = "volvocomm"
version = "0.1.0"
authors = ["Porya Dashtipour"]
license = ""
default-run = "volvocomm"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
libp2p = { version = "0.54.0", features = [
    "async-std",
    "gossipsub",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
] }
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.21"
lazy_static = "1.5.0"
local-ip-address = "0.6.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
